[gd_scene load_steps=9 format=3 uid="uid://xs4el8hun23k"]

[ext_resource type="Script" uid="uid://c3wef2oq6tlga" path="res://scripts/start_screen.gd" id="1_hm208"]
[ext_resource type="Texture2D" uid="uid://cg3v1vqw7ta2" path="res://assets/level/start.png" id="1_r2jwc"]
[ext_resource type="Shader" uid="uid://c8f3mp10uiiga" path="res://scenes/highlight.gdshader" id="2_hm208"]
[ext_resource type="Texture2D" uid="uid://bafatihab2lh2" path="res://assets/level/lettre0.png" id="3_5pab1"]
[ext_resource type="Texture2D" uid="uid://ds4jderwtfbsa" path="res://assets/level/lettre1.png" id="4_o30b1"]
[ext_resource type="AudioStream" uid="uid://cmjqtkjynuhy1" path="res://assets/sound/letter.ogg" id="6_5pab1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ka6nf"]
shader = ExtResource("2_hm208")
shader_parameter/clr = Color(1, 0.784314, 0.117647, 1)
shader_parameter/type = 2
shader_parameter/thickness = 16.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hm208"]
shader = ExtResource("2_hm208")
shader_parameter/clr = Color(1, 0.784314, 0.117647, 1)
shader_parameter/type = 2
shader_parameter/thickness = 16.0

[node name="StartScreen" type="Node2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_hm208")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_r2jwc")

[node name="Letter0" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_ka6nf")
position = Vector2(106, 203)
texture = ExtResource("3_5pab1")

[node name="Button0" type="Button" parent="Letter0"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(750, 450)
offset_left = -26.0
offset_top = -668.0
offset_right = 724.0
offset_bottom = -168.0

[node name="Letter1" type="Sprite2D" parent="."]
visible = false
material = SubResource("ShaderMaterial_hm208")
position = Vector2(-119, 436)
scale = Vector2(1.57075, 1.56348)
texture = ExtResource("4_o30b1")

[node name="Button1" type="Button" parent="Letter1"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(750, 450)
offset_left = -36.0
offset_top = -839.0
offset_right = 793.0
offset_bottom = 134.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Letter" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_5pab1")

[connection signal="pressed" from="Letter0/Button0" to="." method="_on_first_button_pressed"]
[connection signal="pressed" from="Letter1/Button1" to="." method="_on_second_button_pressed"]
